Correction of the overflow-x problem

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ html::-webkit-scrollbar {
 
 html {
     scrollbar-width: none;
+    overflow-x: hidden;
 }
 
 html {
